# Sunrise-ANSI-Editor

./: .gitignore  CMakeLists.txt  makefile  versionhistory.txt
include/: ANSI.hpp  art.hpp  file_io.hpp  input.hpp  lib.hpp  log.hpp  output.hpp  precalculate.hpp  settings.hpp
src/: ANSI.cpp  art.cpp  file_io.cpp  input.cpp  lib.cpp  log.cpp  main.cpp  output.cpp  precalculate.cpp
